--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header">
         <h1 class="logo">
-            <img src="/image/logo.png" alt="Launcher Logo"> GULAM's APP LAUNCHER <span class="version">(1.0.0)</span>
+            <img src="logo.png" alt="Launcher Logo"> GULAM's APP LAUNCHER <span class="version">(1.0.0)</span>
 
         </h1>
     </div>
@@ -25,16 +25,16 @@
     <div class="icons">
         <div class="flex-container">
             <div class="flex">
-                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><i id="fa1" class="fa fa-envelope" aria-hidden="true"></i></a>
             </div>
             <div class="flex">
-                <a href="https://www.youtube.com/channel/UCrlH1_iC7L6aqGkeNTtXNfg" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                <a href="https://www.youtube.com/channel/UCrlH1_iC7L6aqGkeNTtXNfg" target="_blank"><i id="fa2" class="fa fa-youtube-play" aria-hidden="true"></i></a>
             </div>
             <div class="flex">
-                <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/feed/" target="_blank"><i id="fa3" class="fa fa-linkedin-square" aria-hidden="true"></i></a>
             </div>
             <div class="flex">
-                <a href="https://www.facebook.com/profile.php?id=100012327944271 " target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100012327944271 " target="_blank"><i id="fa4" class="fa fa-facebook-official" aria-hidden="true"></i></a>
             </div>
         </div>
 
