--- a/popup.html
+++ b/popup.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    
     <div class="header">
         <h1 class="logo">
             <img src="logo.png" alt="Launcher Logo"> GULAM's APP LAUNCHER <span class="version">(1.0.0)</span>
@@ -20,7 +21,7 @@
         </h1>
     </div>
     <div class="content">
-        <p><b>       ******* Quickly Launch Following ********</b></p>
+        <p><b>    &#x1F60a  ickly  Launch Following Apps : &#x1F60a </b></p>
     </div>
     <div class="icons">
         <div class="flex-container">
