--- a/popup.html
+++ b/popup.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type="text/css">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <title>MY  App Launcher Chrome Extension.</title>
-       
+    <title>MY App Launcher Chrome Extension.</title>
+
 </head>
 
 <body>
-    
+
     <div class="header">
         <h1 class="logo">
             <img src="logo.png" alt="Launcher Logo"> GULAM's APP LAUNCHER <span class="version">(1.0.0)</span>
@@ -21,7 +21,7 @@
         </h1>
     </div>
     <div class="content">
-        <p><b>    &#x1F60a  ickly  Launch Following Apps : &#x1F60a </b></p>
+        <p><b>    &#x1F60a  Quickly  Launch Following Apps : &#x1F60a </b></p>
     </div>
     <div class="icons">
         <div class="flex-container">
@@ -37,6 +37,10 @@
             <div class="flex">
                 <a href="https://www.facebook.com/profile.php?id=100012327944271 " target="_blank"><i id="fa4" class="fa fa-facebook-official" aria-hidden="true"></i></a>
             </div>
+            <div class="flex">
+                <a href="https://github.com/gulamansari57181" target="_blank"><i id="fa5" class="fa fa-github" aria-hidden="true"></i></a>
+            </div>
+
         </div>
 
     </div>
