--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
 
     <div class="header">
         <h1 class="logo">
-            <img src="logo.png" alt="Launcher Logo"> GULAM's APP LAUNCHER <span class="version">(1.0.0)</span>
+            <img src="logo.png" alt="Launcher Logo"> GULAM's APP LAUNCHER <span class="version">(1.0.1)</span>
 
         </h1>
     </div>
@@ -39,6 +39,9 @@
             </div>
             <div class="flex">
                 <a href="https://github.com/gulamansari57181" target="_blank"><i id="fa5" class="fa fa-github" aria-hidden="true"></i></a>
+            </div>
+            <div class="flex">
+                <a href="https://leetcode.com/gulam_57181/" target="_blank"><i id="fa6" class="fa fa-code" aria-hidden="true"></i></a>
             </div>
 
         </div>
